src_files += files(
    'code.c',
    'code.h',
    'common.c',
    'common.h',
    'current_code.c',
    'current_code.h',
    'header.c',
    'header.h',
    'main.c',
    'main.h',
    'remainder.c',
    'remainder.h',
    'state.c',
    'state.h',
    'symbol.c',
    'symbol.h',
    'utils.c',
    'utils.h',
)

subdir('alignment')
subdir('dictionary')
